--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .grid-container{
   height: 100vh;
   width: 600px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .grid{
@@ -15,6 +15,8 @@
   height: 100px;
   width: 100px;
   text-align: center;
+  line-height: 100px;
+  font-size: 22px;
   background-color: lightgreen;
   border: 1px solid lightgrey;
 }
@@ -25,4 +27,8 @@
 
 .yellow{
   background-color: yellow;
+}
+
+.template{
+  display: none;
 }
